Fix Spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,7 +26,7 @@ body {
   h3 {
     font-family: "bebas_neuelight";
     font-size: 26px;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
   }
 
   p {
